@@ -2,14 +2,13 @@
 # CustomerTicketSearchResultShort.dtl - html for ticket status view (all tickets)
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CustomerTicketSearchResultShort.dtl,v 1.29 2010-08-19 09:35:20 mg Exp $
+# $Id: CustomerTicketSearchResultShort.dtl,v 1.30 2010-08-19 12:55:35 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 # --
 
-<!-- start form -->
 <div id="MainBox" class="TicketView ARIARoleMain SearchResults $Config{"Ticket::Frontend::CustomerTicketOverviewSortable"} Sortable">
     <div class="ActionRow">
         <ul class="Tabs">
@@ -38,10 +37,24 @@
         <table class="Overview">
             <thead>
                 <tr>
-                    <th class="Status"><a href="$Env{"Baselink"}Action=$Env{"Action"};SortBy=State;Order=$LQData{"Order"};Filter=$LQData{"Filter"};Limit=$LQData{"Limit"};ShowClosedTickets=$LQData{"ShowClosed"};Type=$LQData{"Type"}">$Text{"State"}</a></th>
-                    <th class="Ticket"><a href="$Env{"Baselink"}Action=$Env{"Action"};SortBy=Ticket;Order=$LQData{"Order"};Filter=$LQData{"Filter"};Limit=$LQData{"Limit"};ShowClosedTickets=$LQData{"ShowClosed"};Type=$LQData{"Type"}">$Config{"Ticket::Hook"}</a></th>
-                    <th class="Title"><a href="">$Text{"Subject"}</a></th>
-                    <th class="Age"><a href="$Env{"Baselink"}Action=$Env{"Action"};SortBy=Age;Order=$LQData{"Order"};Filter=$LQData{"Filter"};Limit=$LQData{"Limit"};ShowClosedTickets=$LQData{"ShowClosed"};Type=$LQData{"Type"}">$Text{"Age"}</a></th>
+                    <th class="Status">
+                        <a href="$Env{"Baselink"}Action=$Env{"Action"};Subaction=Search;SortBy=State;Order=$LQData{"Order"};Filter=$LQData{"Filter"};Limit=$LQData{"Limit"};ShowClosedTickets=$LQData{"ShowClosed"};Type=$LQData{"Type"}">
+                            $Text{"State"}
+                        </a>
+                    </th>
+                    <th class="Ticket">
+                        <a href="$Env{"Baselink"}Action=$Env{"Action"};Subaction=Search;SortBy=Ticket;Order=$LQData{"Order"};Filter=$LQData{"Filter"};Limit=$LQData{"Limit"};ShowClosedTickets=$LQData{"ShowClosed"};Type=$LQData{"Type"}">
+                            $Config{"Ticket::Hook"}
+                        </a>
+                    </th>
+                    <th class="Title">
+                        $Text{"Subject"}
+                    </th>
+                    <th class="Age">
+                        <a href="$Env{"Baselink"}Action=$Env{"Action"};Subaction=Search;SortBy=Age;Order=$LQData{"Order"};Filter=$LQData{"Filter"};Limit=$LQData{"Limit"};ShowClosedTickets=$LQData{"ShowClosed"};Type=$LQData{"Type"}">
+                            $Text{"Age"}
+                        </a>
+                    </th>
                 </tr>
             </thead>
             <tbody>
